--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2B7EFE</color>
+    <color name="dark_blue">#00427D</color>
     <color name="green">#4CB24E</color>
+    <color name="dark_green">#015905</color>
     <color name="lite_gray">#313234</color>
     <color name="medium_gray">#222325</color>
     <color name="dark_gray">#0C0C0C</color>
+    <color name="text_gray">#979797</color>
 
 </resources>
