--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -1,10 +1,16 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.JobSearchApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@color/dark_gray</item>
         <item name="android:statusBarColor">@color/dark_gray</item>
+    </style>
+
+    <style name="SearchView" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:editTextColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="searchIcon">@color/white</item>
     </style>
 
     <style name="Theme.JobSearchApp" parent="Base.Theme.JobSearchApp" />
