--- a/feature-main/src/main/res/values/styles.xml
+++ b/feature-main/src/main/res/values/styles.xml
@@ -138,4 +138,11 @@
         <item name="android:clipToPadding">true</item>
     </style>
 
+    <style name="GeneralTextStyle">
+        <item name="android:fontFamily">@font/sf_pro_display</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+    </style>
+
 </resources>
