[fix] updating vacancy in DB [add] mocks for all screens, favorite screen use adapterDelegate

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,7 +8,7 @@
         android:title="@string/main_nav_bar"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/favoriteFragment"
+        android:id="@+id/favoritesFragment"
         android:icon="@drawable/ic_favorite"
         android:orderInCategory="2"
         android:title="@string/favorite_nav_bar"
@@ -22,7 +22,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/messagesFragment"
+        android:id="@+id/chatFragment"
         android:icon="@drawable/ic_chat"
         android:orderInCategory="3"
         android:title="@string/chat_nav_bar"
