--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,7 +8,7 @@
         android:title="@string/main_nav_bar"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/favoritesFragment"
+        android:id="@+id/favoriteFragment"
         android:icon="@drawable/ic_favorite"
         android:orderInCategory="2"
         android:title="@string/favorite_nav_bar"
