--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,10 @@
         <item name="android:textSize">@dimen/sp_20</item>
         <item name="android:textFontWeight">500</item>
     </style>
+
+    <style name="BottomBarStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dm_70</item>
+        <item name="android:background">@color/medium_gray</item>
+    </style>
 </resources>
