--- a/core/src/main/res/values-night/themes.xml
+++ b/core/src/main/res/values-night/themes.xml
@@ -1,14 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Base.Theme.JobSearchApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="android:windowBackground">@color/dark_gray</item>
         <item name="android:statusBarColor">@color/dark_gray</item>
     </style>
+
     <style name="SearchView" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:editTextColor">@color/white</item>
-        <item name="android:textColorHint">@color/white</item>
-        <item name="searchIcon">@color/white</item>
+        <item name="android:textColorHint">@color/text_gray</item>
+        <item name="searchIcon">@color/text_gray</item>
+        <item name="android:fontFamily">@font/sf_pro_display</item>
+        <item name="android:textSize">@dimen/sp_14</item>
     </style>
+
 </resources>
